feature - port of contract